--- a/Principal_Style.css
+++ b/Principal_Style.css
@@ -23,6 +23,13 @@ body {
 	margin: auto;
 }
 
+.sipnosis-contenedor
+{
+
+	width: 90%;
+	margin: auto;
+}
+
 header {
 
 	padding: 30px 0;
@@ -67,7 +74,7 @@ header nav a.activo {
 	font-size: 16px;
 	min-height: 60.62em;
 	color: #fff;
-	background: linear-gradient(rgba(0, 0, 0, .70) 0%, rgba(0,0,0,.80) 100%), url(img/luffy.png);
+	background: linear-gradient(rgba(0, 0, 0, .70) 0%, rgba(0,0,0,.20) 100%), url(img/luffy-gear-5-evil-smile-one-piece-moewalls.com.gif);
 	background-position: center center;
 	background-size: cover;
 	margin-bottom: 3.12em;
@@ -76,7 +83,8 @@ header nav a.activo {
 	align-items: end;
 }
 
-.sipnosis .menu-contenedor {
+
+.sipnosis .sipnosis-contenedor {
 
 	margin: 0 auto;
 	margin-bottom: 6.25em;
@@ -184,3 +192,57 @@ header nav a.activo {
 
 
 }
+
+/* ------- -------- -------- Animacion --------- -------*/
+
+
+@keyframes slideInDown { 
+    
+    from {
+
+        transform: translateY(-130px);
+
+    }
+
+    to {
+
+        transform: translateY(0px);
+
+    }
+
+}
+
+.menu-contenedor{
+
+    animation-duration: 2s ;
+    animation-name: slideInDown;
+    animation-timing-function: ease;
+
+}
+
+@keyframes hide { 
+    
+    from {
+
+        opacity: 0;
+
+    }
+
+    to {
+
+        opacity: 1;
+    }
+
+}
+
+
+
+.pie {
+
+    animation-duration: 1.5s ;
+    animation-name: hide;
+    animation-fill-mode: both;
+    animation-timing-function: ease-in;
+
+}
+
